--- a/apigw-http-api-lambda-rds-proxy-cdk/src/package.json
+++ b/apigw-http-api-lambda-rds-proxy-cdk/src/package.json
@@ -30,9 +30,9 @@
     "@aws-cdk/core": "^1.120.0",
     "@aws-sdk/client-rds": "^3.28.0",
     "@aws-sdk/credential-providers": "^3.28.0",
+    "@aws-sdk/lib-rds": "file:vendor/aws-sdk-lib-rds-v3.43.0.tgz",
     "@aws-sdk/signature-v4": "^3.25.0",
     "@types/aws-lambda": "^8.10.83",
-    "aws-sdk-js-v3-rds-signer": "^1.0.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
